k3d-github/cluster-types/mgmt/components/staging/metaphor/templates/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: metaphor-staging-ingress
  namespace: staging
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`metaphor-staging.<DOMAIN_NAME>`)
      services:
        - name: metaphor-staging
          port: 80
  tls:
    secretName: metaphor-staging-tls
